- fix for issue #48 - refactoring of some code